# ccy-rates

./: .env  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/application/: rates.rs
src/era_adapter/: main.rs
src/rest_adapter/: get.rs
src/scheduler_adapter/: main.rs
